--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,19 @@
-<!--<!doctype html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <meta name="viewport"-->
-<!--          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
-<!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
-<!--    <title>Document</title>-->
-<!--</head>-->
-<!--<body>-->
 
-<!--</body>-->
-<!--</html>-->
-
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-<h1> Hello Franky dddd</h1>
+<div class="container">
+  <div class="row">
+      <h1> COLOR FACTORY</h1>
+    <div class="col">
+      Columnmmmmm
+    </div>
+    <div class="col">
+      Columnuuuuu
+    </div>
+    <div class="col">
+      Column
+    </div>
+  </div>
+</div>
 
 {% endblock %}
