--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,21 @@
 
 {% extends "base.html" %}
 {% block content %}
-<div class="container">
-  <div class="row">
-      <h1> COLOR FACTORY</h1>
-    <div class="col">
-      Columnmmmmm
+<div class="container"><div class="container spaced-top-5">
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <h1 class="heading-title">All Colors</h1>
+                <h2 class="heading-title">Are Beautiful</h2>
+            </div>
+            <a href="/products">
+                <button class="btn-custom spaced-top-2">COMANDA AICI</button>
+            </a>
+        </div>
+        <div class="col">
+            {% include "carousel.html" %}
+        </div>
     </div>
-    <div class="col">
-      Columnuuuuu
-    </div>
-    <div class="col">
-      Column
-    </div>
-  </div>
 </div>
 
 {% endblock %}
